--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-SESSION_ID="Replace here with your session ID"
+SESSION_ID="Buddy;;;RdInkSqb#VQKjCPft48d-JmxkUi9m_GgF7grh1oGisOcKaGFX1FY"
 AUTO_STATUS_SEEN=true
 AUTO_STATUS_REACT=true
 REJECT_CALL=false
@@ -7,7 +7,7 @@ WELCOME=false
 AUTO_READ=false
 AUTO_TYPING=true
 AUTO_RECORDING=false
-ALWAYS_ONLINE=false
+ALWAYS_ONLINE=true
 AUTO_BLOCK=true
 AUTO_REACT=false
 PREFIX="."
