--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-SESSION_ID="Buddy;;;ZQQAVQ4A#P2_W7uv-OrV6w_GsKEy8KaTHx5aBbQsnouBna4l4LCM"
+SESSION_ID="Buddy;;;EUQ1SYKT#5KB7A5Ruo6Xyo2kxOo0U8u92nLQqC88qDRoV3OWHiOw"
 AUTO_STATUS_SEEN=true
 AUTO_STATUS_REACT=true
 REJECT_CALL=false
-MODE=public
+MODE=private
 WELCOME=false
 AUTO_READ=false
 AUTO_TYPING=true
